tests/frontend_tests/error_struct_initializer.c
struct {
  // error: expected ';' after 'a'
  int a = 4;
};

int main() {
  return 0;
}
